--- a/CT_Skill_Test.css
+++ b/CT_Skill_Test.css
@@ -7,7 +7,7 @@
 .image_bg {
   width: 100%;
   height: 100vh;
-  background-image: url(images/denis-linine-W4o1oWx0k0g-unsplash.jpg);
+  background-image: url(https://i.postimg.cc/qMKx4nKc/denis-linine-W4o1o-Wx0k0g-unsplash.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -16,7 +16,7 @@
 .image_bg-1 {
   width: 100%;
   height: 100vh;
-  background-image: url(images/wallpaper.jpg);
+  background-image: url(https://i.postimg.cc/BnsH3z4s/wallpaper.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -51,7 +51,7 @@
 .image_bg-2 {
   width: 100%;
   height: 100vh;
-  background-image: url(images/rene-reichelt-HzaT5l4Fzqc-unsplash.jpg);
+  background-image: url(https://i.postimg.cc/G38kxYX0/rene-reichelt-Hza-T5l4-Fzqc-unsplash.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
