--- a/CT_Skill_Test.css
+++ b/CT_Skill_Test.css
@@ -65,86 +65,96 @@
   color: #414F6B;
 }
 
-@media (max-width:1200px){
+@media (max-width:1200px) {
   .image_bg {
-    
+
     height: 80vh;
   }
 
-  .image_bg-1{
-    height: 90vh; 
+  .image_bg-1 {
+    height: 90vh;
   }
 
-  .image_bg-2{
+  .image_bg-2 {
     height: 100vh;
   }
 }
-@media (max-width:992px){
+
+@media (max-width:992px) {
   .image_bg {
-    
+
     height: 70vh;
   }
 
-  .image_bg-1{
-    height: 80vh; 
+  .image_bg-1 {
+    height: 80vh;
   }
 
-  .image_bg-2{
+  .image_bg-2 {
     height: 90vh;
   }
- .carousel-bg{
-  margin-bottom: 3px !important;
- }
 
-}
-@media (max-width:768px),(max-height:512){
-  .zero-one-text{
-    font-size: 14px !important;
-  }
-  .carousel-bg{
-    margin-bottom: 10px !important;
-   }
-  .image_bg {
-    
-    height: 70vh;
-  }
-
-  .image_bg-1{
-    height: 85vh; 
-  }
-
-  .image_bg-2{
-    height: 90vh;
-  }
-}
-@media (max-width:768px),(max-height:1024){
-  .zero-one-text{
-    font-size: 14px !important;
-  }
-  .carousel-bg{
+  .carousel-bg {
     margin-bottom: 3px !important;
-   }
+  }
+
+}
+
+@media (max-width:768px),
+(max-height:512) {
+  .zero-one-text {
+    font-size: 14px !important;
+  }
+
+  .carousel-bg {
+    margin-bottom: 10px !important;
+  }
+
   .image_bg {
-    
+
+    height: 70vh;
+  }
+
+  .image_bg-1 {
+    height: 85vh;
+  }
+
+  .image_bg-2 {
+    height: 90vh;
+  }
+}
+
+@media (max-width:768px),
+(max-height:1024) {
+  .zero-one-text {
+    font-size: 14px !important;
+  }
+
+  .carousel-bg {
+    margin-bottom: 0px !important;
+  }
+
+  .image_bg {
+
     height: 60vh;
   }
 
-  .image_bg-1{
-    height: 70vh; 
+  .image_bg-1 {
+    height: 70vh;
   }
 
-  .image_bg-2{
+  .image_bg-2 {
     height: 70vh;
   }
 }
 
-@media (max-width:575px){
-  th{
+@media (max-width:575px) {
+  th {
     padding-left: 31px !important;
   }
 
-  td{
-    padding-left:31px !important ;
+  td {
+    padding-left: 31px !important;
   }
 }
 
@@ -192,39 +202,41 @@
     font-size: 15px !important;
   }
 
-  th{
+  th {
     padding-left: 15px !important;
   }
 
-  td{
-    padding-left:15px !important ;
+  td {
+    padding-left: 15px !important;
   }
 
 }
 
 @media (max-width:360px) {
-   .f-img{
+  .f-img {
     width: 100px !important;
-   }
+  }
 
-   .copyright{
+  .copyright {
     font-size: 9px !important;
-   }
+  }
 
-   table {
+  table {
     width: 260px !important;
     font-size: 12px !important;
   }
-  th{
+
+  th {
     padding-left: 16px !important;
     font-size: 38px !important;
   }
 
-  td{
-    padding-left:16px !important ;
+  td {
+    padding-left: 16px !important;
   }
 
 }
+
 @media (max-width:280px) {
   .zero-one-text {
     font-size: 12px !important;
@@ -237,13 +249,14 @@
   .zero-one-container {
     margin-top: 100px !important;
   }
+
   .c-img {
     height: 23%;
     width: 23%;
     padding-left: 5px;
   }
 
-  
+
   .mountain-1 {
     font-size: 12px !important;
     margin-left: 15px !important;
@@ -254,7 +267,7 @@
     margin-left: -30px !important;
   }
 
-  .t-link{
+  .t-link {
     font-size: 10px !important;
   }
 
@@ -262,7 +275,7 @@
     font-family: 'Bebas Neue', sans-serif;
     font-weight: 400;
     font-size: 110px;
-  
+
   }
 
   .zero-one-t {
@@ -277,7 +290,8 @@
   .zero-one-text {
     margin-left: 52px !important;
   }
-  .mountain-1{
+
+  .mountain-1 {
     padding-top: 11px !important;
     padding-bottom: 11px !important;
   }
@@ -286,12 +300,13 @@
     width: 240px !important;
     font-size: 12px !important;
   }
-  th{
+
+  th {
     padding-left: 18px !important;
     font-size: 30px !important;
   }
 
-  td{
-    padding-left:18px !important ;
+  td {
+    padding-left: 18px !important;
   }
 }
