--- a/CT_Skill_Test.css
+++ b/CT_Skill_Test.css
@@ -3,14 +3,40 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/*https://i.postimg.cc/nzFXDrnM/photo-1459666644539-a9755287d6b0.jpg*/
 .image_bg {
+  position: relative;
   width: 100%;
   height: 110vh;
-  background-image: url(https://i.postimg.cc/nzFXDrnM/photo-1459666644539-a9755287d6b0.jpg);
+  background-image: url(MOUNTAIN.svg);
   background-position: 50% 10%;
   background-size: cover;
   background-repeat: no-repeat;
+}
+.s-m-con{
+  margin-left: -155px;
+  margin-top: px;
+  
+}
+
+#snow{
+  z-index: 10;
+}
+#rock{
+  z-index: 10;
+}
+
+#LOSANGELES{
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 75px;
+  color: black;
+  
+}
+
+#MOUNTAINS{
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 85px;
+  color: #414F6B;
 }
 
 .image_bg-1 {
@@ -27,6 +53,8 @@
   width: 20%;
   padding-left: 10px;
 }
+
+
 
 
 
@@ -166,6 +194,11 @@
 
   .mountain-2 {
     font-size: 16px !important;
+  }
+
+  .image_bg {
+
+    height: 40vh;
   }
 }
 
